--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
         <module>chatServer</module>
         <module>chatClient</module>
         <module>chatClient</module>
+        <module>chatClient</module>
     </modules>
 
     <properties>
